[package]
name = "ctrlflow"
version = "0.4.2"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[features]
fs = ["derive_more", "inotify", "tokio/fs", "tokio-stream"]

[dependencies]
async-stream = "0.3"
derivative = "2"
futures = "0.3"
log = "0.4"
typemap_rev = "0.1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]
optional = true

[dependencies.inotify]
version = "0.10"
optional = true

[dependencies.petgraph]
version = "0.6"
default-features = false
features = ["graphmap"]

[dependencies.tokio]
version = "1.3"
features = ["macros", "rt-multi-thread", "sync"]

[dependencies.tokio-stream]
version = "0.1"
features = ["fs", "sync"]
optional = true
