[package]
name = "ctrlflow"
version = "1.0.1"
edition = "2021"

[lints.rust]
#missing_docs = "deny" #TODO
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
futures = "0.3.28"
if_chain = "1.0.2"
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
